configs/nginx2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  ports:
  - name: http
    port: 80
  - name: xhttps
    port: 1443
  selector:
    app: nginx2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx
        ports:
          - name: http
            containerPort: 80 
          - name: xhttps
            containerPort: 1443
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/
      volumes:
        - name: config
          configMap:
            name: nginx2
            items:
            - key: nginx.conf
              path: nginx.conf
